--- a/2016summer/160810/J.in
+++ b/2016summer/160810/J.in
@@ -1,18 +1,5 @@
-3 1
-ACM
-IBM
-ICM
-0 0
-5 2
-iwzwz
-iziwi
-zwizi
-1 0
-A
-B
-C
-10 5
-jLRNlNyGWx
-yyLnlyyGDA
-yLRnvyyGDA
+7 5
+kgTOIuB
+kTTsgQU
+kTAOIuE
 0 0
