--- a/plus/simulation/G.in
+++ b/plus/simulation/G.in
@@ -1,6 +1,32 @@
-1
+5
+
+CCCCWC
+WWWWLW
+LLLLFL
+FFFFPF
+PPPPCP
+
 CFFLLW
 CPDPDC
 FLDWFD
 LFCFCD
 CDPLWL
+
+CCWWCC
+WWCCWW
+CCWWCC
+WWCCWW
+LLLLLL
+
+CCCCCC
+CCCCCC
+CCCWDC
+CCCCWD
+CCCCWD
+
+CCCCCC
+CCCCCC
+CCCCCC
+CCCCCC
+CCCCCC
+
